tests/compile_failures/attributes/invalid_list_values.rs
use dioxus_sugar::attributes;

#[attributes(list(div, "span"))]
struct Props {}

fn main() {}